--- a/src/styles/meals/page.scss
+++ b/src/styles/meals/page.scss
@@ -15,6 +15,13 @@
 
             h4 {
                 border-bottom: 1px solid white;
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 0.25rem;
+
+                button {
+                    padding: 0 0.25rem;
+                }
             }
 
             .ingredients {
