- A bit of a styling reshuffle.

--- a/src/styles/meals/_index.scss
+++ b/src/styles/meals/_index.scss
@@ -4,8 +4,8 @@
     gap: 1rem;
 
     .meals {
-        display: grid;
-        grid-template-columns: repeat(3, auto);
+        display: flex;
+        flex-direction: column;
         gap: 2rem;
 
         .meal {
