--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -1,3 +1,5 @@
 @use '@/styles/globals.scss' as *;
 
-@use '@/styles/meals/page.scss' as *;
+@use '@/styles/home' as *;
+@use '@/styles/meals' as *;
+@use '@/styles/ingredients' as *;
