--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -95,8 +95,8 @@ a {
 
 
 main {
-    max-width: fit-content;
-    padding: 1rem 2rem;
+    // max-width: fit-content;
+    padding: 0.5rem 1rem;
 }
 
 .title {
