--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -77,9 +77,10 @@ body {
 
 body {
     color: rgb(var(--foreground-rgb));
-    background: linear-gradient(to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+    background-color: rgb(var(--background-start-rgb));
+    // background: linear-gradient(to bottom,
+    //         transparent,
+    //         rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 a {
@@ -107,7 +108,7 @@ main {
 }
 
 table {
-    display: block;
+    // display: block;
     width: auto;
     height: auto;
     margin: 0;
@@ -122,6 +123,12 @@ table {
     -webkit-border-horizontal-spacing: 0;
     -webkit-border-vertical-spacing: 0;
 }
+
+input,
+select {
+    font-size: 1rem;
+}
+
 
 // main {
 //     display: flex;
