--- a/src/styles/ingredients/_index.scss
+++ b/src/styles/ingredients/_index.scss
@@ -28,22 +28,23 @@
 
         display: flex;
         flex-direction: column;
-        //gap: 0.5rem;
+        gap: 0.25rem;
 
         .ingredient {
             display: flex;
             justify-content: space-between;
             padding: 0.5rem 0.5rem;
             border-radius: 0.25rem;
-            ;
+            background-color: rgb(var(--tile-end-rgb));
+
+            &:nth-child(odd) {
+                background-color: rgb(var(--tile-start-rgb));
+            }
 
             button {
                 padding: 0 0.25rem;
             }
 
-            &:nth-child(odd) {
-                background-color: #222;
-            }
         }
     }
 
