--- a/src/styles/meals/_index.scss
+++ b/src/styles/meals/_index.scss
@@ -6,15 +6,22 @@
     .meals {
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
 
         .meal {
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
+            background-color: rgb(var(--tile-end-rgb));
+            padding: 0.5rem 1rem;
+            border-radius: 0.5rem;
+
+            &:nth-child(odd) {
+                background-color: rgb(var(--tile-start-rgb));
+            }
 
             h4 {
-                border-bottom: 1px solid white;
+                border-bottom: 1px solid rgb(var(--foreground-rgb));
                 display: flex;
                 justify-content: space-between;
                 padding-bottom: 0.25rem;
@@ -45,45 +52,79 @@
         flex-direction: column;
         gap: 1rem;
 
-        th,
-        td {
-            padding: 0.25rem 0.5rem;
-        }
+        .add-form {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas:
+                "ingredient add-button"
+                "amount add-button";
+            gap: 0.5rem;
 
-        td {
+            select {
+                grid-area: ingredient;
+            }
 
-            &.amount-cell {
-                text-align: right;
+            label {
+                grid-area: amount;
+                gap: 1rem;
+                display: grid;
+                grid-template-columns: repeat(3, auto);
+                align-items: center;
 
-                &>div {
-                    display: flex;
-                    gap: 0.25rem;
-                    align-items: center;
-
-                    input {
-                        width: 75px;
-                        text-align: right;
-                    }
-
-                    span {
-                        font-size: 0.75rem;
-                    }
+                input {
+                    text-align: center;
+                    width: 100px;
                 }
             }
 
             button {
-                width: 100%;
-                padding: 0.25rem 0.5rem;
+                grid-area: add-button;
+
             }
         }
 
         table {
             thead {
+
                 th {
                     text-align: left;
-                    border-bottom: white 1px solid;
+                    border-bottom: rgb(var(--foreground-rgb)) 1px solid;
                 }
             }
+
+            th,
+            td {
+                padding: 0.25rem 0.5rem;
+            }
+
+            td {
+
+                &.amount-cell {
+                    text-align: right;
+
+                    &>div {
+                        display: flex;
+                        gap: 0.25rem;
+                        align-items: center;
+
+                        input {
+                            width: 75px;
+                            text-align: right;
+                        }
+
+                        span {
+                            font-size: 0.75rem;
+                        }
+                    }
+                }
+
+                button {
+                    width: 100%;
+                    padding: 0.25rem 0.5rem;
+                }
+            }
+
         }
     }
 
