- Testing a move to PostgreSQL

--- a/src/styles/meals/_index.scss
+++ b/src/styles/meals/_index.scss
@@ -9,6 +9,7 @@
         gap: 1rem;
 
         .meal {
+            cursor: pointer;
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
@@ -47,85 +48,81 @@
 
 .add-meal-page {
 
-    form {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
-        .add-form {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: 1fr 1fr;
-            grid-template-areas:
-                "ingredient add-button"
-                "amount add-button";
-            gap: 0.5rem;
+    .add-form {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:
+            "ingredient add-button"
+            "amount add-button";
+        gap: 0.5rem;
 
-            select {
-                grid-area: ingredient;
+        select {
+            grid-area: ingredient;
+        }
+
+        label {
+            grid-area: amount;
+            gap: 1rem;
+            display: flex;
+            align-items: center;
+
+            input {
+                text-align: center;
+                width: 100px;
             }
+        }
 
-            label {
-                grid-area: amount;
-                gap: 1rem;
-                display: grid;
-                grid-template-columns: repeat(3, auto);
-                align-items: center;
+        button {
+            grid-area: add-button;
+        }
+    }
 
-                input {
-                    text-align: center;
-                    width: 100px;
+    table {
+        thead {
+
+            th {
+                text-align: left;
+                border-bottom: rgb(var(--foreground-rgb)) 1px solid;
+            }
+        }
+
+        th,
+        td {
+            padding: 0.25rem 0.5rem;
+        }
+
+        td {
+
+            &.amount-cell {
+                text-align: right;
+
+                &>div {
+                    display: flex;
+                    gap: 0.25rem;
+                    align-items: center;
+
+                    input {
+                        width: 75px;
+                        text-align: right;
+                    }
+
+                    span {
+                        font-size: 0.75rem;
+                    }
                 }
             }
 
             button {
-                grid-area: add-button;
-
-            }
-        }
-
-        table {
-            thead {
-
-                th {
-                    text-align: left;
-                    border-bottom: rgb(var(--foreground-rgb)) 1px solid;
-                }
-            }
-
-            th,
-            td {
+                width: 100%;
                 padding: 0.25rem 0.5rem;
             }
-
-            td {
-
-                &.amount-cell {
-                    text-align: right;
-
-                    &>div {
-                        display: flex;
-                        gap: 0.25rem;
-                        align-items: center;
-
-                        input {
-                            width: 75px;
-                            text-align: right;
-                        }
-
-                        span {
-                            font-size: 0.75rem;
-                        }
-                    }
-                }
-
-                button {
-                    width: 100%;
-                    padding: 0.25rem 0.5rem;
-                }
-            }
-
         }
+
     }
 
 }
