--- a/src/styles/ingredients/_index.scss
+++ b/src/styles/ingredients/_index.scss
@@ -3,27 +3,6 @@
     flex-direction: column;
     gap: 1rem;
 
-    form {
-        display: flex;
-        flex-direction: column;
-        gap: 1em;
-
-        &>div {
-            display: flex;
-            justify-content: space-between;
-            gap: 0.5rem;
-
-            &:last-of-type {
-                justify-content: center;
-            }
-        }
-
-        button {
-            padding: 0 0.25rem;
-        }
-
-    }
-
     .list {
 
         display: flex;
@@ -31,6 +10,7 @@
         gap: 0.25rem;
 
         .ingredient {
+            cursor: pointer;
             display: flex;
             justify-content: space-between;
             padding: 0.5rem 0.5rem;
@@ -46,6 +26,30 @@
             }
 
         }
+    }
+
+}
+
+.ingredient-form-page {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+
+
+    &>div {
+        display: grid;
+        grid-template-columns: auto auto;
+        // justify-content: space-between;
+        gap: 0.5rem;
+
+        &:last-of-type {
+            justify-content: center;
+        }
+    }
+
+    button {
+        padding: 0 0.25rem;
     }
 
 }
