- Swapped out add ingredient select for react-select component.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,90 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+
+  .react-select-container .react-select__control {
+    @apply
+    text-sm
+    rounded-lg
+    p-0.5
+    border
+
+  bg-gray-50 
+  border-gray-300
+  text-gray-900 
+  focus:ring-blue-500
+  focus:border-blue-500
+
+  dark:bg-gray-700
+  dark:border-gray-600
+  dark:placeholder-gray-400
+  dark:text-white
+  dark:focus:ring-blue-500
+  dark:focus:border-blue-500
+  ;
+  }
+
+  .react-select-container .react-select__control--is-focused {
+    @apply
+    border-gray-300
+
+     dark:border-gray-600 
+     shadow-none;
+  }
+
+  .react-select-container .react-select__menu {
+    @apply 
+    border-2 
+    bg-gray-50      
+    border-gray-300 
+
+    dark:bg-gray-700
+    dark:border-gray-600;
+  }
+
+  .react-select-container .react-select__option {
+    @apply 
+    text-sm
+    text-gray-900 
+    bg-gray-50 
+    hover:bg-neutral-200 
+
+    dark:text-white 
+    dark:bg-gray-700
+    dark:hover:bg-neutral-800;
+  }
+
+  .react-select-container .react-select__indicator-separator {
+    @apply bg-neutral-400;
+  }
+
+  .react-select-container .react-select__input-container,
+  .react-select-container .react-select__placeholder,
+  .react-select-container .react-select__single-value {
+    @apply text-neutral-600 dark:text-neutral-200;
+  }
+  
+  .react-select-container .react-select__placeholder {
+    @apply dark:text-gray-400;
+  }
+
+  .react-select-container .react-select__group-heading {
+    @apply border-b border-b-gray-400 mx-2 ps-1;
   }
 }
